--- a/UserWebApp/src/main/resources/templates/index.html
+++ b/UserWebApp/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Welcome to my application</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap.min.css}"/>
 </head>
 <body>
 
