--- a/UserWebApp/src/main/resources/templates/index.html
+++ b/UserWebApp/src/main/resources/templates/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome to my application</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 </head>
 <body>
 
-<div align="center">
+<div class="container-fluid text-center">
 
   <h1>Welcome to my application</h1>
-  <h2>
-      <a href="/users">Manage users</a>
-  </h2>
+    <a class="h2" th:href="@{/users}">Manage users</a>
 
 </div>
 
